# telescope

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  asteroidsyncserviced.apparmor  clickable.json  clickable.yaml  manifest.json.in  telescope-wrapper  telescope.apparmor  telescope.desktop  telescope.desktop.in  telescope.pro
app/: CMakeLists.txt  app.pro  app.qrc  main.cpp  telescope.apparmor  telescope.desktop
app/qml/: telescope.qml
app/qml/components/: ExpandableListItem.qml  InfoBar.qml  NotificationServiceItem.qml  StandardListItem.qml
app/qml/controller/: SettingsController.qml
app/qml/pages/: ExportPage.qml  InfoPage.qml  LoadingPage.qml  LocationPicker.qml  MainMenuPage.qml  ScreenshotPage.qml  WatchesPage.qml  WeatherSettingsDialog.qml
assets/: assets.pro
libs/: libs.pro
po/: CMakeLists.txt  ar.po  az.po  be.po  bqi.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  ia.po  id.po  isv.po  it.po  ka.po  ko.po  lt.po  mr.po  nb_NO.po  nl.po  nl_BE.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rue.po  sk.po  sv.po  ta.po  (+8 more)
